# story_writer

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
demo/: demo.ipynb  demo_outline.ipynb  demo_outline_builder.ipynb  demo_outline_builder.py  demo_planing.ipynb  demo_planning_builder.py  demo_quick_start.ipynb
src/story_writer/: __init__.py  story_writer.py
src/story_writer/config/: __init__.py  default_model_client.py
src/story_writer/prompts/: __init__.py  event_prompts.py  outline_prompts.py  planing_prompts.py  writing_prompts.py
src/story_writer/schemas/: __init__.py  event_schemas.py  outline_schemas.py  planning_schemas.py  writing_schemas.py
src/story_writer/workflow/: __init__.py  outline_builder.py  planning_builder.py  writing_builder.py
