[project]
name = "story-writer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lst", email = "shitong_liu@163.com" }
]
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.7.4",
    "autogen-ext[openai]>=0.7.4",
    "json-repair>=0.50.1",
    "loguru>=0.7.3",
]

[project.scripts]
story-writer = "story_writer:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
